Cleaned up build process by removing obsoleted stuff

--- a/odbc/trunk/src/hsqlodbc.vcproj
+++ b/odbc/trunk/src/hsqlodbc.vcproj
@@ -44,7 +44,7 @@
 				AdditionalOptions="/D SSL_DLL=&quot;\&quot;SSLEAY32.dll\&quot;&quot;"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="&quot;C:\Program Files\PostgreSQL\8.2\include&quot;;&quot;C:\OpenSSL\include&quot;"
+				AdditionalIncludeDirectories="&quot;;&quot;C:\OpenSSL\include&quot;"
 				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;_USRDLL;PSQLODBC_EXPORTS;ODBCVER=0x0351;DRIVER_CURSOR_IMPLEMENT;WIN_MULTITHREAD_SUPPORT;DYNAMIC_LOAD;MULTIBYTE;UNICODE_SUPPORT;USE_SSL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -74,7 +74,7 @@
 				OutputFile="hsqlodbcu.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;C:\Program Files\PostgreSQL\8.2\lib\ms&quot;;&quot;C:\OpenSSL\lib\VC&quot;"
+				AdditionalLibraryDirectories="&quot;;&quot;C:\OpenSSL\lib\VC&quot;"
 				IgnoreAllDefaultLibraries="false"
 				ModuleDefinitionFile=".\hsqlodbcu.def"
 				DelayLoadDLLs="ssleay32.dll;libeay32.dll;secur32.dll;crypt32.dll;XOLEHLP.DLL"
@@ -141,7 +141,7 @@
 				AdditionalOptions="/D SSL_DLL=&quot;\&quot;SSLEAY32.dll\&quot;&quot;"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="&quot;C:\Program Files\PostgreSQL\8.2\include&quot;;&quot;C:\OpenSSL\include&quot;"
+				AdditionalIncludeDirectories="&quot;;&quot;C:\OpenSSL\include&quot;"
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_USRDLL;PSQLODBC_EXPORTS;ODBCVER=0x0351;DRIVER_CURSOR_IMPLEMENT;WIN_MULTITHREAD_SUPPORT;DYNAMIC_LOAD;MULTIBYTE;UNICODE_SUPPORT;USE_SSL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="1"
@@ -172,7 +172,7 @@
 				OutputFile="hsqlodbcu.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;C:\Program Files\PostgreSQL\8.2\lib\ms&quot;;&quot;C:\OpenSSL\lib\VC&quot;"
+				AdditionalLibraryDirectories="&quot;;&quot;C:\OpenSSL\lib\VC&quot;"
 				IgnoreAllDefaultLibraries="false"
 				ModuleDefinitionFile=".\hsqlodbcu.def"
 				DelayLoadDLLs="ssleay32.dll;libeay32.dll;secur32.dll;crypt32.dll;XOLEHLP.DLL"
