Renamed psqlodbc.c to hsqlodbc.c and psqlodbc.h to psqlodbc.h, in preparation for changing many String definitions in those file from Postgresql-specific values.

--- a/odbc/trunk/src/hsqlodbc.vcproj
+++ b/odbc/trunk/src/hsqlodbc.vcproj
@@ -790,7 +790,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="psqlodbc.c"
+				RelativePath="hsqlodbc.c"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -1060,7 +1060,7 @@
 				>
 			</File>
 			<File
-				RelativePath="psqlodbc.h"
+				RelativePath="hsqlodbc.h"
 				>
 			</File>
 			<File
