--- a/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.Common.UnitTests/System.Data.Hsqldb.Common.UnitTests.csproj
+++ b/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.Common.UnitTests/System.Data.Hsqldb.Common.UnitTests.csproj
@@ -28,19 +28,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="IKVM.GNU.Classpath, Version=0.31.2535.14596, Culture=neutral, PublicKeyToken=05732303801b208f, processorArchitecture=MSIL">
+    <Reference Include="IKVM.OpenJDK.ClassLibrary, Version=0.38.0.4, Culture=neutral, PublicKeyToken=13235d27fcbfff58, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\IKVM.GNU.Classpath.dll</HintPath>
-    </Reference>
-    <Reference Include="IKVM.Runtime, Version=0.31.2535.14560, Culture=neutral, PublicKeyToken=05732303801b208f, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\IKVM.Runtime.dll</HintPath>
+      <HintPath>..\Lib\IKVM.OpenJDK.ClassLibrary.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\NUnit\bin\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="Org.Hsqldb, Version=1.8.0.7, Culture=neutral, PublicKeyToken=05732303801b208f, processorArchitecture=MSIL">
+    <Reference Include="Org.Hsqldb, Version=1.8.0.10, Culture=neutral, PublicKeyToken=05732303801b208f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\Org.Hsqldb.dll</HintPath>
     </Reference>
