--- a/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.Common/System.Data.Hsqldb.Common.csproj
+++ b/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.Common/System.Data.Hsqldb.Common.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>TRACE;DEBUG;SYSTRAN</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\System.Data.Hsqldb.Common.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
