--- a/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.TestCoverage/System.Data.Hsqldb.TestCoverage.csproj
+++ b/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.TestCoverage/System.Data.Hsqldb.TestCoverage.csproj
@@ -18,6 +18,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\System.Data.Hsqldb.TestCoverage.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
