Reconcile move of res cat & desc attr classes from client design assembly.

--- a/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.Common/System.Data.Hsqldb.Common.csproj
+++ b/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.Common/System.Data.Hsqldb.Common.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\ResCategoryAttribute.cs" />
+    <Compile Include="Attributes\ResDescriptionAttribute.cs" />
     <Compile Include="Converter\LexographicEnumConverter.cs" />
     <Compile Include="Enumeration\BaseColumnNullability.cs" />
     <Compile Include="Enumeration\ConnectionProtocol.cs" />
