--- a/odbc/trunk/src/hsqlodbc.rc
+++ b/odbc/trunk/src/hsqlodbc.rc
@@ -202,7 +202,7 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,5,224,50,14,WS_GROUP
     PUSHBUTTON      "キャンセル",IDCANCEL,66,224,50,14
     PUSHBUTTON      "適用",IDAPPLY,128,224,50,14
-    CONTROL         "byteaをLOとして扱う",DS_BYTEAASLONGVARBINARY,"Button",
+    CONTROL         "VarBinをBLOBとして扱う",DS_MAPVBTOBLOB,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,15,85,87,10
 END
 
@@ -547,7 +547,7 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,15,71,87,10
     //CONTROL         "Server side prepare",DS_SERVERSIDEPREPARE,"Button",
                     //BS_AUTOCHECKBOX | WS_TABSTOP,163,71,90,10
-    CONTROL         "bytea as LO",DS_BYTEAASLONGVARBINARY,"Button",
+    CONTROL         "client VarBinary to BLOB",DS_MAPVBTOBLOB,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,163,41,87,10
     GROUPBOX        "Int8 As",IDC_STATIC,5,82,256,25
     CONTROL         "default",DS_INT8_AS_DEFAULT,"Button",BS_AUTORADIOBUTTON | 
