--- a/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.Common/System.Data.Hsqldb.Common.csproj
+++ b/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.Common/System.Data.Hsqldb.Common.csproj
@@ -92,6 +92,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+	  <Compile Include="Sql\Types\SqlObject.cs" />
     <Compile Include="Sql\Predicate\Like.cs" />
     <Compile Include="Sql\Token.cs" />
     <Compile Include="Sql\Token.IdFor.cs">
@@ -104,7 +105,6 @@
       <DependentUpon>Token.cs</DependentUpon>
     </Compile>
     <Compile Include="Sql\Tokenizer.cs" />
-    <Compile Include="Sql\Type\SqlObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
