More class diagrams.

--- a/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.Client/System.Data.Hsqldb.Client.csproj
+++ b/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.Client/System.Data.Hsqldb.Client.csproj
@@ -193,6 +193,9 @@
       <Name>System.Data.Hsqldb.Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <PropertyGroup>
     <PostBuildEvent>
