--- a/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.TestCoverage/System.Data.Hsqldb.TestCoverage.csproj
+++ b/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.TestCoverage/System.Data.Hsqldb.TestCoverage.csproj
@@ -30,8 +30,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NoCoverageAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubjectAssemblyAttribute.cs" />
     <Compile Include="ForSubjectAttribute.cs" />
